tests/snapshots/snapshots__medicines_confirm_untested.snap
---
source: tests/snapshots.rs
expression: result.screen
---
PANDEMIC DEFENSE   RUNNING   Tick: 0  Funds: $1000  RP: 0  Personnel: 50  Infected: 50.5K  Dead: 0
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ World Map ───────────────────────────────────────────────────────────────────────────────────────┐┌ ⚠ Antiviral-A ───────────────────────────────────────────────────────────────────────────────────┐
│┌────────────────────────────┐   ┌────────────────────────────┐   ┌────────────────────────────┐  ││                                                                                                  │
││North America             OK│   │Europe                    OK│   │Asia                    HIGH│  ││  Vaccinate North America against Strain Alpha                                                    │
││Pop: 500.0M                 │   │Pop: 750.0M                 │   │Inf 50.0K                   │  ││                                                                                                  │
││████████████████████████████│   │████████████████████████████│   │████████████████████████████│  ││  ⚠ WARNING: UNTESTED MEDICINE                                                                    │
││No infections               │───│                            │───│                            │  ││                                                                                                  │
││↔ Oceania                   │   │                            │   │                            │  ││  Not tested against Strain Alpha.                                                                │
││                            │   │                            │   │                            │  ││  25% chance of adverse effects — 20% of doses                                                    │
│└────────────────────────────┘   └────────────────────────────┘   └────────────────────────────┘  ││  will KILL instead of help.                                                                      │
│               │               ╱                │               ╱                │                ││                                                                                                  │
│┌────────────────────────────┐   ┌────────────────────────────┐   ┌────────────────────────────┐  ││  Deploy anyway?                                                                                  │
││South America            LOW│   │Africa                    OK│   │Oceania                   OK│  ││                                                                                                  │
││Inf 500                     │   │Pop: 1.4B                   │   │Pop: 45.0M                  │  ││  [Enter] Confirm  [Esc] Cancel                                                                   │
││████████████████████████████│   │████████████████████████████│   │████████████████████████████│  ││                                                                                                  │
││                            │   │                            │   │                            │  ││                                                                                                  │
││                            │   │                            │   │                            │  ││                                                                                                  │
││                            │   │                            │   │                            │  ││                                                                                                  │
│└────────────────────────────┘   └────────────────────────────┘   └────────────────────────────┘  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[T] Threats  [R] Research  [M] Medicines  [P] Policy  [Space] Pause  [?] Help  [Q] Quit
