tests/snapshots/snapshots__medicines_panel_select_region.snap
---
source: tests/snapshots.rs
expression: result.screen
---
PANDEMIC DEFENSE   RUNNING   Tick: 0  Funds: $1000  RP: 0  Personnel: 50  Infected: 50.5K  Dead: 0
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ World Map ───────────────────────────────────────────────────────────────────────────────────────┐┌ Deploy: Antiviral-A ─────────────────────────────────────────────────────────────────────────────┐
│╔════════════════════════════╗   ┌────────────────────────────┐   ┌────────────────────────────┐  ││  Deploy: Antiviral-A                                                                             │
│║North America             OK║   │Europe                    OK│   │Asia                    HIGH│  ││                                                                                                  │
│║Pop: 500.0M                 ║   │Pop: 750.0M                 │   │Inf 50.0K                   │  ││▶ North America 500.0M pop       0 inf                                                            │
│║████████████████████████████║   │████████████████████████████│   │████████████████████████████│  ││  South America 430.0M pop     500 inf                                                            │
│║No infections               ║───│                            │───│                            │  ││  Europe        750.0M pop       0 inf                                                            │
│║↔ Oceania                   ║   │                            │   │                            │  ││  Africa          1.4B pop       0 inf                                                            │
│║                            ║   │                            │   │                            │  ││  Asia            4.7B pop   50.0K inf                                                            │
│╚════════════════════════════╝   └────────────────────────────┘   └────────────────────────────┘  ││  Oceania        45.0M pop       0 inf                                                            │
│               │               ╱                │               ╱                │                ││                                                                                                  │
│┌────────────────────────────┐   ┌────────────────────────────┐   ┌────────────────────────────┐  ││  [Enter] Select  [Esc] Back                                                                      │
││South America            LOW│   │Africa                    OK│   │Oceania                   OK│  ││                                                                                                  │
││Inf 500                     │   │Pop: 1.4B                   │   │Pop: 45.0M                  │  ││                                                                                                  │
││████████████████████████████│   │████████████████████████████│   │████████████████████████████│  ││                                                                                                  │
││                            │   │                            │   │                            │  ││                                                                                                  │
││                            │   │                            │   │                            │  ││                                                                                                  │
││                            │   │                            │   │                            │  ││                                                                                                  │
│└────────────────────────────┘   └────────────────────────────┘   └────────────────────────────┘  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[T] Threats  [R] Research  [M] Medicines  [P] Policy  [Space] Pause  [?] Help  [Q] Quit
