tests/snapshots/snapshots__medicines_panel_select_target.snap
---
source: tests/snapshots.rs
expression: result.screen
---
PANDEMIC DEFENSE   RUNNING   Tick: 0  Funds: $1000  RP: 0  Personnel: 50  Infected: 50.5K  Dead: 0
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ World Map ───────────────────────────────────────────────────────────────────────────────────────┐┌ Antiviral-A → North America ─────────────────────────────────────────────────────────────────────┐
│┌────────────────────────────┐   ┌────────────────────────────┐   ┌────────────────────────────┐  ││  Antiviral-A → North America                                                                     │
││North America             OK│   │Europe                    OK│   │Asia                    HIGH│  ││                                                                                                  │
││Pop: 500.0M                 │   │Pop: 750.0M                 │   │Inf 50.0K                   │  ││▶ Vaccinate susceptible (Strain Alpha)                                                            │
││████████████████████████████│   │████████████████████████████│   │████████████████████████████│  ││    500.0M susceptible | 100.0K doses                                                             │
││No infections               │───│                            │───│                            │  ││  Treat infected (Strain Alpha)                                                                   │
││                            │   │                            │   │                            │  ││    0 infected | 100.0K doses                                                                     │
││                            │   │                            │   │                            │  ││                                                                                                  │
│└────────────────────────────┘   └────────────────────────────┘   └────────────────────────────┘  ││  Cost: $200    Funding: $1000                                                                    │
│↔ Oceania      │               ╱                │               ╱                │                ││                                                                                                  │
│┌────────────────────────────┐   ┌────────────────────────────┐   ┌────────────────────────────┐  ││  [Enter] Deploy  [Esc] Back                                                                      │
││South America            LOW│   │Africa                    OK│   │Oceania                   OK│  ││                                                                                                  │
││Inf 500                     │   │Pop: 1.4B                   │   │Pop: 45.0M                  │  ││                                                                                                  │
││████████████████████████████│   │████████████████████████████│   │████████████████████████████│  ││                                                                                                  │
││                            │   │                            │   │                            │  ││                                                                                                  │
││                            │   │                            │   │                            │  ││                                                                                                  │
││                            │   │                            │   │                            │  ││                                                                                                  │
│└────────────────────────────┘   └────────────────────────────┘   └────────────────────────────┘  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[T] Threats  [R] Research  [M] Medicines  [P] Policy  [Space] Pause  [?] Help  [Q] Quit
